--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
         "chart.js": "2.7.2",
         "datatables.net-bs4": "1.10.19",
         "hoek": "^5.0.4",
-        "http-server": "0.11.1",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1",
-        "natives": "^1.1.6"
+        "http-server": "0.11.1"
     },
     "scripts": {
         "start": "http-server"
