--- a/package.json
+++ b/package.json
@@ -30,15 +30,25 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.2.0",
         "bootstrap": "4.1.3",
+        "browser-sync": "2.24.6",
         "chart.js": "2.7.2",
         "datatables.net-bs4": "1.10.19",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^5.0.0",
+        "gulp-clean-css": "3.9.4",
+        "gulp-header": "2.0.5",
+        "gulp-rename": "1.4.0",
+        "gulp-sass": "4.0.1",
+        "gulp-uglify": "3.0.1",
         "hoek": "^5.0.4",
+        "http-server": "0.11.1",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1",
-        "http-server": "0.11.1"
+        "natives": "^1.1.6"
     },
     "scripts": {
-        "start": "http-server"
+        "start": "http-server",
+        "postinstall": "gulp vendor"
     },
     "devDependencies": {
         "browser-sync": "2.24.6",
